Fix test dependencies compatibility for Java 17